--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,6 @@
     </div>
 
     <!-- Application will be loaded here -->
-    <script src="../dist/main.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
